2005-02-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/cond.h, skins/rtai/heap.h: Remove bugous forward
	declarations.

	* skins/rtai/sem.c (rt_sem_broadcast): Zero the resource count.

	* skins/rtai/task.h (thread2rtask): Convert to inline function to
	prevent spurious evaluation side-effects due to multiple macro arg
	expansion. Such bug affected condvar and mutex supports.

2005-02-03  Max Krasnyansky <maxk@qualcomm.com>

	* configure.in: Fix GCC tuning flags determination script.

2005-02-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c: Stop page-aligning virtual addresses of
	shmbases; this is useless.

2005-02-02  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (__rt_intr_wait): Fix pending count
	handling and return it to the caller as a success value.

	* include/nucleus/intr.h: Discard unused status field.

2005-02-01  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c (rthal_set_linux_task_priority): Limit
	high priority value.

2005-01-28  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (engage_irq_shield, disengage_irq_shield): Add
	back hw masking when operating the shield. This prevents a race
	with the callback request code which may occur under high
	mode migration rate. Oops.

	* nucleus/fusion.c: Add pthread_exit_rt() to unmap a shadow thread
	from a regular Linux task without destroying the latter.

	* nucleus/shadow.c (xnshadow_unmap): Handle differently unmapping
	calls from either primary or secondary modes.

	* nucleus/shadow.c (rtai_sysentry): Return -EPERM upon attempt to
	migrate a non-fusion thread.

	* configure.in: Use -fno-strict-aliasing when compiling user-space
	stuff since 2.6.10 enforces it to silence its own warnings, and we
	need to recycle a few of its offending headers. When have been
	pretty careful up to now not to break the type aliasing rules, so
	it should be ok, but we definitely need to keep going on this
	way... This hack should be removed asap when the kernel side is
	fixed.
