@@ -109,12 +109,9 @@ static inline void xnsynch_renice_thread (xnthread_t *thread, int prio)
 	/* xnpod_resume_thread() must be called for runnable threads
 	   but the running one. */
 	xnpod_resume_thread(thread,0);
-    else /* In case of a shadow, we do not attempt to renice the
-	    mated Linux task if we did not renice the former. */
-	return;
 
 #if defined (__KERNEL__) && defined(CONFIG_RTAI_OPT_FUSION)
-    if (testbits(thread->status,XNSHADOW))
+    if (testbits(thread->status,XNRELAX))
 	xnshadow_renice(thread);
 #endif /* __KERNEL__ && CONFIG_RTAI_OPT_FUSION */
 }
