@@ -1,3 +1,12 @@
+2005-02-10  Philippe Gerum  <rpm@localhost>
+
+	* nucleus/pod.c, nucleus/sync.c, nucleus/shadow.c: Rework the way
+	Linux priorities are updated on-the-fly when the nucleus changes
+	them for shadow threads. The new approach is based on a lazy
+	update upon return from xnshaow_relax(), since sending priority
+	update requests to Linux makes no sense while the affected task is
+	running in primary mode.
+
 2005-02-09  Philippe Gerum  <rpm@xenomai.org>
 
 	* skins/rtai/cond.h, skins/rtai/heap.h: Remove bugous forward
